/develop

1.0.1
    + No external API changes.

    # internal
    + Refactor ineffectual assignments.
    + Fix comment typos.

1.0.0
    + Working.

parser:
    + Add package.  Parses conf files based on configuration.