@@ -164,6 +164,96 @@ archive = 0 */2 * * *
 	}
 }
 
+func TestConf_FillByTag_customTypeWithBuiltinKind(t *testing.T) {
+	chk := assert.New(t)
+	//
+	s := `
+	global-value = I'm a global!
+global-value = I'm also global!
+
+global with spaces = yay!
+
+[section]
+section-value = I'm a section value!
+
+[schedule]
+archive = 0 6 * * *
+archive = 0 */2 * * *
+`
+	type SpecialString string
+	type T struct {
+		Global           SpecialString `conf:"global-value"`
+		GlobalWithSpaces SpecialString `conf:"global with spaces"`
+
+		// Tests [section]
+		Section struct {
+			SectionValue SpecialString `conf:"section-value"`
+		} `conf:"section"`
+		SectionPtr *struct {
+			SectionValue SpecialString `conf:"section-value"`
+		} `conf:"section"`
+		SectionSlicePtr []*struct {
+			SectionValue SpecialString `conf:"section-value"`
+		} `conf:"section"`
+		PtrSectionSlicePtr *[]*struct {
+			SectionValue SpecialString `conf:"section-value"`
+		} `conf:"section"`
+
+		// Tests [schedule]
+		Schedule struct {
+			Archive []SpecialString `conf:"archive"`
+		} `conf:"schedule"`
+	}
+	testIt := func(t *T) {
+		// pointers created
+		chk.NotNil(t)
+		chk.NotNil(t.SectionPtr)
+		chk.NotNil(t.SectionSlicePtr)
+		chk.NotNil(t.PtrSectionSlicePtr)
+		// global config
+		chk.Equal(SpecialString("I'm also global!"), t.Global)
+		chk.Equal(SpecialString("yay!"), t.GlobalWithSpaces)
+		// section config
+		chk.Equal(SpecialString("I'm a section value!"), t.Section.SectionValue)
+		chk.Equal(SpecialString("I'm a section value!"), t.SectionPtr.SectionValue)
+		// slice and ptr-to-slice sections
+		chk.Equal(1, len(t.SectionSlicePtr))
+		chk.Equal(SpecialString("I'm a section value!"), t.SectionSlicePtr[0].SectionValue)
+		chk.Equal(1, len(*t.PtrSectionSlicePtr))
+		chk.Equal(SpecialString("I'm a section value!"), (*t.PtrSectionSlicePtr)[0].SectionValue)
+		//
+		chk.Equal(2, len(t.Schedule.Archive))
+		chk.Equal(SpecialString("0 6 * * *"), t.Schedule.Archive[0])
+		chk.Equal(SpecialString("0 */2 * * *"), t.Schedule.Archive[1])
+	}
+
+	{
+		tmpfile, err := ioutil.TempFile("", "gotest")
+		chk.NoError(err)
+		defer os.Remove(tmpfile.Name())
+		_, err = tmpfile.Write([]byte(s))
+		chk.NoError(err)
+		err = tmpfile.Close()
+		chk.NoError(err)
+		conf, err := conf.File(tmpfile.Name())
+		chk.NoError(err)
+		chk.NotNil(conf)
+		var t *T
+		err = conf.FillByTag("conf", &t)
+		chk.NoError(err)
+		testIt(t)
+	}
+	{
+		conf, err := conf.String(s)
+		chk.NoError(err)
+		chk.NotNil(conf)
+		var t *T
+		err = conf.FillByTag("conf", &t)
+		chk.NoError(err)
+		testIt(t)
+	}
+}
+
 func ExampleConf_Fill() {
 	type T struct {
 		First  string
