@@ -4,6 +4,6 @@ go 1.13
 
 require (
 	github.com/nofeaturesonlybugs/errors v1.0.1
-	github.com/nofeaturesonlybugs/set v0.2.2
+	github.com/nofeaturesonlybugs/set v0.3.1
 	github.com/stretchr/testify v1.7.0
 )
